Workaround bug with hidden table of contents
When the window is too small to show the table of contents and is hidden
with "display: none", the main topic is stuck is an 'invisible' animated
state. It seems to be because swup.js is using "transition-fade" but
it's not visible in the viewport.

--- a/_sass/docs.scss
+++ b/_sass/docs.scss
@@ -437,7 +437,12 @@ h1, h2, h3, h4 {
 
 @media (max-width: $screen-lg + 400px) {
     .toc-container {
-        display: none;
+        // BUG: swup: Animation fails to finish if this is display:none ("transition-fade")
+        height: 0;
+        width: 0;
+        opacity: 0;
+        visibility: hidden;
+        overflow: hidden;
     }
 }
 
